@@ -332,6 +332,7 @@ swig_sources = run_swig(['misc.i'], 'src', GENDIR, PKGDIR,
                           'src/_clipbrd.i',
                           'src/_stdpaths.i',
                           'src/_power.i',
+                          'src/_about.i',
                           ],
                         True)
 ext = Extension('_misc_', swig_sources,
